Changelog for Alias (v1.3.1-SNAPSHOT)

2013-05-29 22:19:46 +0100    add new localisation bundles (James Richardson)
2013-05-29 22:15:18 +0100    bring in step with changes in BukkitUtilities (James Richardson)
2013-05-29 22:09:35 +0100    refactor commands (James Richardson)
2013-05-29 22:00:53 +0100    update and fix alias not relocating bukkitutilities (James Richardson)
2013-05-29 21:58:20 +0100    remove debugging info (James Richardson)
2013-05-19 12:36:39 +0100    remove unused imports (James Richardson)
2013-05-15 01:14:39 +0100    clean up localisation (James Richardson)
2013-05-15 01:03:28 +0100    update default pom (James Richardson)
2013-05-15 00:35:07 +0100    fixed loop bug in name lookup logic (James Richardson)
2013-05-15 00:18:37 +0100    changed bukkit utilities version again (James Richardson)
2013-05-15 00:08:04 +0100    added tab completion to database (James Richardson)
2013-05-15 00:01:35 +0100    begin process to upgrade to BukkitUtilities 4.2.1 (James Richardson)
2013-05-14 23:56:20 +0100    update pom (James Richardson)

v1.2.0
2012-08-08 05:41:01 +0100    fix time formatting issues (James Richardson)
2012-08-08 05:25:43 +0100    timestamp last_seen (James Richardson)
2012-08-08 05:00:09 +0100    display header even if no names returned (James Richardson)
2012-08-08 04:59:46 +0100    deassociate players correctly (James Richardson)
2012-08-08 04:01:56 +0100    save both records (James Richardson)
2012-08-08 03:57:31 +0100    support new handler (James Richardson)
2012-08-08 03:56:34 +0100    deassociate both players from each other (James Richardson)
2012-08-08 03:38:16 +0100    change to Collection from List fixes #1 (James Richardson)
2012-08-08 03:04:00 +0100    changelog (James Richardson)
2012-08-07 00:11:00 +0100    preparing for snapshot release (James Richardson)
2012-08-06 02:34:24 +0100    reimplement delete command (James Richardson)
2012-08-06 02:18:08 +0100    reimplemented checkcommand (James Richardson)